--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <div class="inner">
                 <h1>nbview</h1>
                 <h2>Jupyter notebooks rendered right in your browser</h2>
+
                 <div id="urlstuff">
                 <p>Currently viewing:<br>
                 <span id="urlname"></span></p>
@@ -55,6 +56,8 @@
                 Made by <a href="https://dfm.io">Dan F-M</a>.<br>
                 See the source on GitHub: <a href="https://github.com/dfm/nbview">dfm/nbview</a>.<br>
                 This wouldn't have been possible without <a href="https://github.com/jsvine/notebookjs">notebook.js</a> by <a href="https://github.com/jsvine">jsvine</a>.
+                <br><br>
+                <a class="bookmark" href="javascript:(function(){window.location = 'https://dfm.io/nbview?url=' + encodeURIComponent(document.location.href)})()">Drag this link to your bookmark bar to get a button that will send any URL here!</a>
             </div>
         </div>
 
