--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 See the source on GitHub: <a href="https://github.com/dfm/nbview">dfm/nbview</a>.<br>
                 This wouldn't have been possible without <a href="https://github.com/jsvine/notebookjs">notebook.js</a> by <a href="https://github.com/jsvine">jsvine</a>.
                 <br><br>
-                <a class="bookmark" href="javascript:(function(){window.location = 'https://dfm.io/nbview?url=' + encodeURIComponent(document.location.href)})()">Drag this link to your bookmark bar to get a button that will send any URL here!</a>
+                Drag this link to your bookmark bar to get a button that will send any URL here: <a class="bookmark" href="javascript:(function(){window.location = 'https://dfm.io/nbview?url=' + encodeURIComponent(document.location.href)})()">Open in nbview</a>
             </div>
         </div>
 
